--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 h1 {
-  margin-left:25%;
+  margin-left: 35%;
   background-image: linear-gradient(180deg, #8e0e00
 ,#1f1c18);
   font-family: lobster;
@@ -15,14 +15,24 @@ h1 {
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
 }
+section{
+    display: flex;
+    justify-items: normal;
+    align-items: center;
+    align-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
 
+    flex-direction: row;
+}
 form{
   border-radius: 5% ; 
   background-color:rgba(63, 51, 51, 0.701);
   color: white;
   width: 30%;
   height: 100% ;
-  margin-left: 10%;
+  
+  
   display: flex;
   justify-items: center;
   justify-content: space-between;
@@ -42,8 +52,9 @@ input , button , label{
   font-size: 18pt ;
   height: 17% ;
   width: 50% ;
-  margin-left:20%;
+  margin-left:auto;
   margin-top: 1% ;
+  margin-right: auto;
 }
 .bg {
  height: 100%;
@@ -84,7 +95,7 @@ table{
     font-size: 0.9em;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    margin-left:30%;
+    
     background-color: white;
     text-align: center
 }
